重构表单组件